# ARQ

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CODE_STYLE.md  README.md  TODO.md  benchmark.py  bld.bat  bld.sh  dbschema.sql  flake.nix
.agents/skills/add-arq-unit-tests/: SKILL.md
.github/workflows/: arq-web.yml  cmake-multi-platform.yml
ARQLib/ARQAdapt/: CMakeLists.txt
ARQLib/ARQAdapt/inc/: dll.h  foo.h
ARQLib/ARQAdapt/inc/ARQCore/: ad_lib.h  ad_refdata_repository.h
ARQLib/ARQAdapt/src/: foo.cpp
ARQLib/ARQAdapt/src/ARQCore/: ad_lib.cpp
ARQLib/ARQAdapt/swig/: ARQLib.i  common_types.i  defines.i  exceptions.i
ARQLib/ARQAdapt/swig/ARQCore/: formats.i  lib.i  physical_type.i  refdata_entities.i  refdata_meta.i  refdata_repository.i  semantic_format.i
ARQLib/ARQAdapt/swig/ARQUtils/: id.i  sys.i  time.i
ARQLib/ARQAdapt/swig/std/: std_optional_csharp.i  std_optional_python.i
ARQLib/ARQClickHouse/: CMakeLists.txt
ARQLib/ARQClickHouse/inc/: ch_mktdata_source.h  ch_mktdata_source_interface.h  ch_refdata_source.h  ch_refdata_source_interface.h  dll.h
ARQLib/ARQClickHouse/src/: ch_mktdata_queries.cpp  ch_mktdata_queries.h  ch_mktdata_source.cpp  ch_mktdata_source_interface.cpp  ch_refdata_source.cpp  ch_refdata_source_interface.cpp  connection.cpp  connection.h
ARQLib/ARQCore/: CMakeLists.txt  README.md
ARQLib/ARQCore/inc/: data_source_config.h  dll.h  dynalib_cache.h  dynalib_hooks.h  formats.h  lib.h  logger.h  messaging_service.h  messaging_service_interface.h  mktdata_entities.h  mktdata_source.h  mktdata_source_interface.h  physical_type.h  refdata_cache_indexes.h  refdata_command_manager.h  refdata_commands.h  refdata_entities.h  refdata_manager.h  refdata_meta.h  refdata_repository.h  refdata_source.h  refdata_source_interface.h  semantic_format.h  serialiser.h  service_base.h  stream_offset_source.h  streaming_service.h  streaming_service_interface.h  type_registry.h  variant.h
ARQLib/ARQCore/src/: data_source_config.cpp  dynalib_cache.cpp  (+15 more)
ARQLib/ARQGrpc/: CMakeLists.txt
ARQLib/ARQKafka/: CMakeLists.txt
ARQLib/ARQMarket/: CMakeLists.txt  README.md
ARQLib/ARQMath/: CMakeLists.txt
ARQLib/ARQMessaging/: CMakeLists.txt
ARQLib/ARQNats/: CMakeLists.txt
ARQLib/ARQProtobuf/: CMakeLists.txt
ARQLib/ARQRedis/: CMakeLists.txt
ARQLib/ARQSerialisation/: CMakeLists.txt
ARQLib/ARQSolace/: CMakeLists.txt
ARQLib/ARQUtils/: CMakeLists.txt  README.md
ARQLib/ARQkafka/: CMakeLists.txt
ARQLib/SWIG/: ARQ.i  CMakeLists.txt  std_weak_ptr.i
ARQLib/SWIG/ARQCore/: mktdata_entities.i
ARQLib/SWIG/ARQMarket/: managed_market.i  market.i
ARQLib/SWIG/ARQUtils/: StrongType_tmp_instances.i  time.i
ARQLib/SWIG/TMQUtils/: date.i  exception.i
ARQLib/SWIG/csharp/: std_optional.i
TMQCore/: CMakeLists.txt
TMQCore/inc/: core.h
TMQCore/src/: core.cpp  dll.h
TMQCore/test/: t_core.cpp
TMQLib/SWIG/: CMakeLists.txt  tmq.i
TMQLib/TMQClickHouse/: CMakeLists.txt
TMQLib/TMQClickHouse/inc/: ch_mktdata_source.h  ch_mktdata_source_interface.h  ch_refdata_source.h  ch_refdata_source_interface.h  connection.h  dll.h  query.h  test.h  types.h
TMQLib/TMQClickHouse/src/: ch_mktdata_source.cpp  ch_mktdata_source_interface.cpp  ch_refdata_source.cpp  ch_refdata_source_interface.cpp  connection.cpp  connection.h  query.cpp  query.h  test.cpp  types.h
TMQLib/TMQCore/: CMakeLists.txt  README.md
TMQLib/TMQMarket/: CMakeLists.txt  README.md
TMQLib/TMQMarket/bench/: b_market.cpp
TMQLib/TMQMarket/inc/: dll.h  managed_market.h  market.h  market_manager.h  market_test.h  mktdata_entities.h  types.h
TMQLib/TMQMarket/src/: dll.h  managed_market.cpp  market.cpp  market_manager.cpp  market_test.cpp
TMQLib/TMQMarket/swig/csharp/: market_test.i
TMQLib/TMQMarket/swig/python/: market_test.i
TMQLib/TMQMarket/test/: t_managed_market.cpp  t_market.cpp  t_market_manager.cpp
TMQLib/TMQMessaging/: CMakeLists.txt
TMQLib/TMQSerialisation/: CMakeLists.txt
TMQLib/TMQSolace/: CMakeLists.txt
TMQLib/TMQUtils/: CMakeLists.txt  README.md
cfg/datasources/: PROD.toml
codegen/definitions/: mktdata_entities.toml  refdata_entities.toml  types.toml
codegen/script/: gen.py  requirements.txt
deploy/k8s/: deployment.yaml  kafka-rd-topics.yaml  kafka-topic.yaml  kustomization.yaml
docs/product/: vision.md
docs/roadmap/: roadmap.md
dotnet/: ARQ.Gateway.slnf  ARQ.NET.slnf  ARQ.slnx
dotnet/ARQ.Gateway/: ARQ.Gateway.csproj  Program.cs  appsettings.json
dotnet/ARQ.NET/: ARQ.NET.csproj
dotnet/ARQ.NET.Tests/: ARQ.NET.Tests.csproj  Debug.runsettings  Install.runsettings  Release.runsettings  UnitTest1.cs
dotnet/ARQ.TestExe/: ARQ.TestExe.csproj  Program.cs
infra/clickhouse/: mktdata_dbschema.sql  mktdata_dummydata.sql  refdata_dbschema.sql  refdata_dummydata.sql
infra/docker/: Dockerfile  install_ninja.sh
infra/solace/: compose.yaml
nix/: arq.nix  deps.nix  docker.nix  package.nix  shell.nix
proto/: CMakeLists.txt  command_manager.proto  id.proto  mktdata_entities.proto  mktdata_markets.proto  refdata.proto  refdata_commands.proto  refdata_entities.proto  refdata_protobuf.proto  streaming_service.proto
scripts/: build.bat  build.sh  clean.bat  clean.sh  codegen.bat  codegen.sh  configure.bat  configure.sh  dockerbuild-web.bat  dockerbuild-web.sh  dockerbuild.bat  dockerbuild.sh  install.bat  install.sh  test.bat  test.sh
testcsharp/ARQDesktop/: ARQDesktop.csproj  App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  app.manifest
testcsharp/ARQLib.Tests/: ARQLib.Tests.csproj  UnitTest1.cs
testcsharp/MarketTestDemo/: .gitignore  MarketTestDemo.csproj  MarketTestDemo.sln  MktDateUpdater.cs  Program.cs
tools/aeron_publisher/: CMakeLists.txt
tools/aeron_subscriber/: CMakeLists.txt
tools/clickhouse_test/: CMakeLists.txt
tools/kafka_example/: CMakeLists.txt
tools/nats_publisher/: CMakeLists.txt
tools/nats_subscriber/: CMakeLists.txt
tools/rd_cmd_publisher/: CMakeLists.txt
ui/arq-web/: .env.gateway-local  .env.gateway-remote-dev  index.html  package-lock.json  package.json  vite.config.ts
(+496 files in other folders)
